# semana-6-desarrollo-multiplataforma-qt-i-juanjo2218

./: README.md
PracticaQT/: CMakeLists.txt  Main.qml  MyElement.qml  MyPantallas.qml  main.cpp
